Fixed blog format on mobile

--- a/React Website/personal-website/src/Pages/BlogPagesContainer/PostsListPage/PostsListPage.module.css
+++ b/React Website/personal-website/src/Pages/BlogPagesContainer/PostsListPage/PostsListPage.module.css
@@ -86,3 +86,52 @@
     margin: 20px 0 0 0;
     padding: 0 15px 20px 15px;
 }
+
+
+
+
+
+/* MOBILE DEVICE STYLING */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)  {
+    /* Post Card */
+    .postCard {
+        width: 320px;
+
+        border-radius: 5px;
+
+        background: rgba(255, 255, 255, 0.1);
+
+        text-align: center;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        cursor: pointer;
+
+        box-shadow: 0px 0px 15px 6px rgba(0, 0, 0, 0.1);
+
+        transition: ease-in-out 0.15s;
+
+        margin: 25px;
+    }
+
+    .postCardThumbnail {
+        width: 290px;
+        height: 145px;
+    
+        margin: 15px 0 0 0;
+    }
+
+    .postCardsContainerInner {
+        width: 100%;
+    
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        padding: 0;
+    }
+}
